add scoring function: mse

--- a/tutorials/Tutorial1_Hospital (Continous).ipynb
+++ b/tutorials/Tutorial1_Hospital (Continous).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.42163896560668945] Load Data start\n",
+      "INFO:profiler.utility:[0.008064746856689453] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', 'None', 'none', '?', 'nan', 'unknown', 'NaN'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      " {'na_values': {'', 'unknown', '?', 'none', 'None', 'NaN', 'nan'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"ProviderNumber\": \"text\",\n",
       "    \"HospitalName\": \"text\",\n",
@@ -78,7 +78,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'Address2': ['equal'], 'Address3': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.4754030704498291] Load Data execution time: 0.05376410484313965\n",
+      "INFO:profiler.utility:[0.10229086875915527] Load Data execution time: 0.09422612190246582\n",
       "\n"
      ]
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -153,9 +153,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[8.309612035751343] Load Embedding start\n",
+      "INFO:profiler.utility:[0.15145492553710938] Load Embedding start\n",
       "\n",
-      "INFO:profiler.utility:[8.345775842666626] Load Embedding execution time: 0.0361638069152832\n",
+      "INFO:profiler.utility:[0.19193387031555176] Load Embedding execution time: 0.04047894477844238\n",
       "\n"
      ]
     }
@@ -174,23 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[8.86588716506958] Create Training Data start\n",
+      "INFO:profiler.utility:[0.19835591316223145] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 214 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 214, and the bound is 0.00006293\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 19/19 [00:00<00:00, 82.92it/s]\n",
+      "100%|██████████| 19/19 [00:00<00:00, 45.80it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 227772\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0299\n",
-      "INFO:profiler.utility:[15.441746950149536] Create Training Data execution time: 6.575859785079956\n",
+      "INFO:profiler.utility:[10.018255710601807] Create Training Data execution time: 9.819899797439575\n",
       "\n"
      ]
     }
@@ -210,17 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[15.44712519645691] Learn Structure start\n",
+      "INFO:profiler.utility:[10.025903940200806] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0302\n",
-      "INFO:profiler.utility:[15.490673065185547] Learn Structure execution time: 0.043547868728637695\n",
+      "INFO:profiler.utility:[10.075329780578613] Learn Structure execution time: 0.04942584037780762\n",
       "\n"
      ]
     }
@@ -234,21 +234,22 @@
    "metadata": {},
    "source": [
     "* score: \n",
+    "    * * \"fit_error\": mse for fitting y = B'X + c for each atttribute y \n",
     "    * \"training_data_fd_vio_ratio\": the higher the score, the more violations of FDs in the training data. (bounded: \\[0,1\\])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[15.497193098068237] Get Dependencies start\n",
+      "INFO:profiler.utility:[10.083653926849365] Get Dependencies start\n",
       "\n",
-      "INFO:profiler.utility:[15.51076889038086] Get Dependencies execution time: 0.01357579231262207\n",
+      "INFO:profiler.utility:[10.171758890151978] Get Dependencies execution time: 0.0881049633026123\n",
       "\n"
      ]
     },
@@ -256,19 +257,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Condition -> Stateavg (n/a)\n",
-      "Condition,Stateavg -> MeasureCode (n/a)\n",
-      "ProviderNumber -> HospitalName (n/a)\n",
-      "ProviderNumber,HospitalName -> Address1 (n/a)\n",
-      "MeasureCode,EmergencyService,ProviderNumber,HospitalName,Address1 -> City (n/a)\n",
-      "EmergencyService,ProviderNumber,HospitalName,Address1,City -> CountyName (n/a)\n",
-      "ProviderNumber,HospitalName,Address1,City,CountyName -> HospitalOwner (n/a)\n",
-      "EmergencyService,ProviderNumber,HospitalName,Address1,City,CountyName,HospitalOwner -> PhoneNumber (n/a)\n"
+      "Condition -> Stateavg (0.03734425774589268)\n",
+      "Condition,Stateavg -> MeasureCode (0.03808627027769272)\n",
+      "ProviderNumber -> HospitalName (0.07065111484606103)\n",
+      "ProviderNumber,HospitalName -> Address1 (0.055400296943704776)\n",
+      "MeasureCode,EmergencyService,ProviderNumber,HospitalName,Address1 -> City (0.10314082449844872)\n",
+      "EmergencyService,ProviderNumber,HospitalName,Address1,City -> CountyName (0.043397961744436477)\n",
+      "ProviderNumber,HospitalName,Address1,City,CountyName -> HospitalOwner (0.05231919043520127)\n",
+      "EmergencyService,ProviderNumber,HospitalName,Address1,City,CountyName,HospitalOwner -> PhoneNumber (0.1373519532507519)\n"
      ]
     }
    ],
    "source": [
-    "parent_sets = pf.session.get_dependencies(score=None)"
+    "parent_sets = pf.session.get_dependencies(score=\"fit_error\")"
    ]
   },
   {
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -378,69 +379,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.421639</td>\n",
+       "      <td>0.008065</td>\n",
        "      <td>start: Load Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.475403</td>\n",
+       "      <td>0.102291</td>\n",
        "      <td>end: Load Data</td>\n",
-       "      <td>0.053764</td>\n",
+       "      <td>0.094226</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8.309612</td>\n",
+       "      <td>0.151455</td>\n",
        "      <td>start: Load Embedding</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8.345776</td>\n",
+       "      <td>0.191934</td>\n",
        "      <td>end: Load Embedding</td>\n",
-       "      <td>0.036164</td>\n",
+       "      <td>0.040479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8.865887</td>\n",
+       "      <td>0.198356</td>\n",
        "      <td>start: Create Training Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>15.441747</td>\n",
+       "      <td>10.018256</td>\n",
        "      <td>end: Create Training Data</td>\n",
-       "      <td>6.575860</td>\n",
+       "      <td>9.819900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>15.447125</td>\n",
+       "      <td>10.025904</td>\n",
        "      <td>start: Learn Structure</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>15.490673</td>\n",
+       "      <td>10.075330</td>\n",
        "      <td>end: Learn Structure</td>\n",
-       "      <td>0.043548</td>\n",
+       "      <td>0.049426</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>15.497193</td>\n",
+       "      <td>10.083654</td>\n",
        "      <td>start: Get Dependencies</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>15.510769</td>\n",
+       "      <td>10.171759</td>\n",
        "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.013576</td>\n",
+       "      <td>0.088105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>15.510769</td>\n",
+       "      <td>10.171759</td>\n",
        "      <td>total_execution_time</td>\n",
-       "      <td>6.722911</td>\n",
+       "      <td>10.092136</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -448,20 +449,20 @@
       ],
       "text/plain": [
        "    time_point                          msg  execution_time\n",
-       "0     0.421639             start: Load Data        0.000000\n",
-       "1     0.475403               end: Load Data        0.053764\n",
-       "2     8.309612        start: Load Embedding        0.000000\n",
-       "3     8.345776          end: Load Embedding        0.036164\n",
-       "4     8.865887  start: Create Training Data        0.000000\n",
-       "5    15.441747    end: Create Training Data        6.575860\n",
-       "6    15.447125       start: Learn Structure        0.000000\n",
-       "7    15.490673         end: Learn Structure        0.043548\n",
-       "8    15.497193      start: Get Dependencies        0.000000\n",
-       "9    15.510769        end: Get Dependencies        0.013576\n",
-       "10   15.510769         total_execution_time        6.722911"
+       "0     0.008065             start: Load Data        0.000000\n",
+       "1     0.102291               end: Load Data        0.094226\n",
+       "2     0.151455        start: Load Embedding        0.000000\n",
+       "3     0.191934          end: Load Embedding        0.040479\n",
+       "4     0.198356  start: Create Training Data        0.000000\n",
+       "5    10.018256    end: Create Training Data        9.819900\n",
+       "6    10.025904       start: Learn Structure        0.000000\n",
+       "7    10.075330         end: Learn Structure        0.049426\n",
+       "8    10.083654      start: Get Dependencies        0.000000\n",
+       "9    10.171759        end: Get Dependencies        0.088105\n",
+       "10   10.171759         total_execution_time       10.092136"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
