--- a/tutorials/Tutorial1_Hospital (no Embedding).ipynb
+++ b/tutorials/Tutorial1_Hospital (no Embedding).ipynb
@@ -50,10 +50,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.006412029266357422] Load Data start\n",
+      "INFO:profiler.utility:[0.005716085433959961] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', '?', 'none', 'NaN', 'nan', 'None', 'unknown'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      " {'na_values': {'', 'None', '?', 'nan', 'NaN', 'unknown', 'none'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"ProviderNumber\": \"text\",\n",
       "    \"HospitalName\": \"text\",\n",
@@ -78,7 +78,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'Address2': ['equal'], 'Address3': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.06034517288208008] Load Data execution time: 0.053933143615722656\n",
+      "INFO:profiler.utility:[0.05812692642211914] Load Data execution time: 0.05241084098815918\n",
       "\n"
      ]
     }
@@ -170,16 +170,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.10926413536071777] Create Training Data start\n",
+      "INFO:profiler.utility:[0.10209202766418457] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 214 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 214, and the bound is 0.00006293\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 19/19 [00:00<00:00, 82.58it/s]\n",
+      "100%|██████████| 19/19 [00:00<00:00, 72.69it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 227772\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0299\n",
-      "INFO:profiler.utility:[1.574963092803955] Create Training Data execution time: 1.4656989574432373\n",
+      "INFO:profiler.utility:[1.8533740043640137] Create Training Data execution time: 1.751281976699829\n",
       "\n"
      ]
     }
@@ -199,17 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[659.2829611301422] Learn Structure start\n",
+      "INFO:profiler.utility:[1.8621809482574463] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0410\n",
-      "INFO:profiler.utility:[659.3167469501495] Learn Structure execution time: 0.03378582000732422\n",
+      "INFO:profiler.utility:[1.9203310012817383] Learn Structure execution time: 0.05815005302429199\n",
       "\n"
      ]
     }
@@ -223,19 +223,22 @@
    "metadata": {},
    "source": [
     "* score: \n",
+    "    * \"fit_error\": mse for fitting y = B'X + c for each atttribute y \n",
     "    * \"training_data_fd_vio_ratio\": the higher the score, the more violations of FDs in the training data. (bounded: \\[0,1\\])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[659.7153372764587] Get Dependencies start\n",
+      "INFO:profiler.utility:[1.9299368858337402] Get Dependencies start\n",
+      "\n",
+      "INFO:profiler.utility:[2.0696451663970947] Get Dependencies execution time: 0.1397082805633545\n",
       "\n"
      ]
     },
@@ -243,36 +246,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Condition -> Stateavg (0.674751642147549)\n",
-      "Condition,Stateavg -> MeasureName (0.05417765463831492)\n",
-      "Condition,Stateavg,MeasureName -> MeasureCode (0.042846050681160444)\n",
-      "MeasureCode -> ProviderNumber (1)\n",
-      "EmergencyService,Stateavg,MeasureName,MeasureCode,ProviderNumber -> HospitalName (1)\n",
-      "ProviderNumber,HospitalName -> Address1 (0.058239318977550976)\n",
-      "MeasureName,MeasureCode,ProviderNumber,HospitalName,Address1 -> City (1)\n",
-      "ProviderNumber,HospitalName,Address1,City -> ZipCode (0.05925472631633769)\n",
-      "ProviderNumber,HospitalName,Address1,City,ZipCode -> PhoneNumber (0.06030199438085616)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:profiler.utility:[660.0223569869995] Get Dependencies execution time: 0.3070197105407715\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ProviderNumber,HospitalName,Address1,City,ZipCode,PhoneNumber -> HospitalOwner (0.05006185931424532)\n",
-      "EmergencyService,MeasureCode,ProviderNumber,HospitalName,Address1,City,ZipCode,PhoneNumber,HospitalOwner -> CountyName (1)\n"
+      "Condition -> Stateavg (0.10837330822074617)\n",
+      "Condition,Stateavg -> MeasureName (0.050621291988830926)\n",
+      "Condition,Stateavg,MeasureName -> MeasureCode (0.012872134039348624)\n",
+      "MeasureCode -> ProviderNumber (0.23975625839455703)\n",
+      "EmergencyService,Stateavg,MeasureName,MeasureCode,ProviderNumber -> HospitalName (0.14666763374808772)\n",
+      "ProviderNumber,HospitalName -> Address1 (0.07994383654017287)\n",
+      "MeasureName,MeasureCode,ProviderNumber,HospitalName,Address1 -> City (0.08258507393625059)\n",
+      "ProviderNumber,HospitalName,Address1,City -> ZipCode (0.18486566362534895)\n",
+      "ProviderNumber,HospitalName,Address1,City,ZipCode -> PhoneNumber (0.04958203696924474)\n",
+      "ProviderNumber,HospitalName,Address1,City,ZipCode,PhoneNumber -> HospitalOwner (0.11756996399348675)\n",
+      "EmergencyService,MeasureCode,ProviderNumber,HospitalName,Address1,City,ZipCode,PhoneNumber,HospitalOwner -> CountyName (0.23868620766575452)\n"
      ]
     }
    ],
    "source": [
-    "parent_sets = pf.session.get_dependencies(score=\"training_data_fd_vio_ratio\")"
+    "parent_sets = pf.session.get_dependencies(score=\"fit_error\")"
    ]
   },
   {
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -382,104 +371,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.006412</td>\n",
+       "      <td>0.005716</td>\n",
        "      <td>start: Load Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.060345</td>\n",
+       "      <td>0.058127</td>\n",
        "      <td>end: Load Data</td>\n",
-       "      <td>0.053933</td>\n",
+       "      <td>0.052411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.109264</td>\n",
+       "      <td>0.102092</td>\n",
        "      <td>start: Create Training Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.574963</td>\n",
+       "      <td>1.853374</td>\n",
        "      <td>end: Create Training Data</td>\n",
-       "      <td>1.465699</td>\n",
+       "      <td>1.751282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.580041</td>\n",
+       "      <td>1.862181</td>\n",
        "      <td>start: Learn Structure</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.623110</td>\n",
+       "      <td>1.920331</td>\n",
        "      <td>end: Learn Structure</td>\n",
-       "      <td>0.043069</td>\n",
+       "      <td>0.058150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1.630008</td>\n",
+       "      <td>1.929937</td>\n",
        "      <td>start: Get Dependencies</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>1.915513</td>\n",
+       "      <td>2.069645</td>\n",
        "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.285505</td>\n",
+       "      <td>0.139708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>659.282961</td>\n",
-       "      <td>start: Learn Structure</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>659.316747</td>\n",
-       "      <td>end: Learn Structure</td>\n",
-       "      <td>0.033786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>659.715337</td>\n",
-       "      <td>start: Get Dependencies</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>660.022357</td>\n",
-       "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.307020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>660.022357</td>\n",
+       "      <td>2.069645</td>\n",
        "      <td>total_execution_time</td>\n",
-       "      <td>2.189012</td>\n",
+       "      <td>2.001551</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    time_point                          msg  execution_time\n",
-       "0     0.006412             start: Load Data        0.000000\n",
-       "1     0.060345               end: Load Data        0.053933\n",
-       "2     0.109264  start: Create Training Data        0.000000\n",
-       "3     1.574963    end: Create Training Data        1.465699\n",
-       "4     1.580041       start: Learn Structure        0.000000\n",
-       "5     1.623110         end: Learn Structure        0.043069\n",
-       "6     1.630008      start: Get Dependencies        0.000000\n",
-       "7     1.915513        end: Get Dependencies        0.285505\n",
-       "8   659.282961       start: Learn Structure        0.000000\n",
-       "9   659.316747         end: Learn Structure        0.033786\n",
-       "10  659.715337      start: Get Dependencies        0.000000\n",
-       "11  660.022357        end: Get Dependencies        0.307020\n",
-       "12  660.022357         total_execution_time        2.189012"
+       "   time_point                          msg  execution_time\n",
+       "0    0.005716             start: Load Data        0.000000\n",
+       "1    0.058127               end: Load Data        0.052411\n",
+       "2    0.102092  start: Create Training Data        0.000000\n",
+       "3    1.853374    end: Create Training Data        1.751282\n",
+       "4    1.862181       start: Learn Structure        0.000000\n",
+       "5    1.920331         end: Learn Structure        0.058150\n",
+       "6    1.929937      start: Get Dependencies        0.000000\n",
+       "7    2.069645        end: Get Dependencies        0.139708\n",
+       "8    2.069645         total_execution_time        2.001551"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
