--- a/tutorials/Tutorial2_TECHospital_built-in-order.ipynb
+++ b/tutorials/Tutorial2_TECHospital_built-in-order.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.7357628345489502] Load Data start\n",
+      "INFO:profiler.utility:[0.006948947906494141] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:parameters used for data loading:\n",
       " {'na_values': 'not available', 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'latin-1', 'normalize': True, 'min_categories_for_embedding': 10}\n",
@@ -75,7 +75,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'Provider ID': ['equal'], 'Hospital Name': ['equal'], 'Address': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZIP Code': ['equal'], 'County Name': ['equal'], 'Phone Number': ['equal'], 'Condition': ['equal'], 'Measure ID': ['equal'], 'Measure Name': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Footnote': ['equal'], 'Measure Start Date': ['equal'], 'Measure End Date': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[1.7623279094696045] Load Data execution time: 1.0265650749206543\n",
+      "INFO:profiler.utility:[1.052103042602539] Load Data execution time: 1.045154094696045\n",
       "\n"
      ]
     }
@@ -152,16 +152,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[17.074049711227417] Create Training Data start\n",
+      "INFO:profiler.utility:[17.964517831802368] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 2 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.transformer:use multiplier = 2, and the bound is 0.00005616\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 16/16 [00:02<00:00,  7.29it/s]\n",
+      "100%|██████████| 16/16 [00:02<00:00,  7.16it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 1614816\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0855\n",
-      "INFO:profiler.utility:[27.41407585144043] Create Training Data execution time: 10.340026140213013\n",
+      "INFO:profiler.utility:[29.069162130355835] Create Training Data execution time: 11.104644298553467\n",
       "\n"
      ]
     }
@@ -181,23 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[71.5690770149231] Learn Structure start\n",
+      "INFO:profiler.utility:[29.07545304298401] Learn Structure start\n",
       "\n",
-      "INFO:profiler.learner:use threshold 0.0416\n",
-      "INFO:profiler.utility:[71.75123882293701] Learn Structure execution time: 0.18216180801391602\n",
+      "INFO:profiler.learner:use threshold 0.0392\n",
+      "INFO:profiler.utility:[29.538742065429688] Learn Structure execution time: 0.4632890224456787\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "autoregress_matrix = pf.session.learn_structure(sparsity=0.1)"
+    "autoregress_matrix = pf.session.learn_structure(sparsity=0.1, infer_order=False)"
    ]
   },
   {
@@ -211,14 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[73.47423076629639] Get Dependencies start\n",
+      "INFO:profiler.utility:[29.54626703262329] Get Dependencies start\n",
       "\n"
      ]
     },
@@ -230,14 +230,17 @@
       "Provider ID,Hospital Name -> Address (0.007858245187263354)\n",
       "Provider ID,Hospital Name,Address -> City (0.01860290496449381)\n",
       "Provider ID,Hospital Name,Address,City -> State (0.07425846555898286)\n",
-      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.028439457864752386)\n"
+      "Provider ID,Hospital Name,Address,City,State -> ZIP Code (0.028439457864752386)\n",
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.018090274389216256)\n",
+      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0029760214091091026)\n",
+      "Measure ID -> Measure Name (0.04483222410072152)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[73.98545598983765] Get Dependencies execution time: 0.5112252235412598\n",
+      "INFO:profiler.utility:[30.134317874908447] Get Dependencies execution time: 0.5880508422851562\n",
       "\n"
      ]
     },
@@ -245,9 +248,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code -> County Name (0.018090274389216256)\n",
-      "Provider ID,Hospital Name,Address,City,State,ZIP Code,County Name -> Phone Number (0.0029760214091091026)\n",
-      "Measure ID -> Measure Name (0.04483222410072152)\n",
       "Measure ID,Measure Name -> Condition (0.23229817014052462)\n",
       "Measure Start Date -> Measure End Date (0.07768434250278881)\n"
      ]
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,104 +364,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.735763</td>\n",
+       "      <td>0.006949</td>\n",
        "      <td>start: Load Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.762328</td>\n",
+       "      <td>1.052103</td>\n",
        "      <td>end: Load Data</td>\n",
-       "      <td>1.026565</td>\n",
+       "      <td>1.045154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>17.074050</td>\n",
+       "      <td>17.964518</td>\n",
        "      <td>start: Create Training Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>27.414076</td>\n",
+       "      <td>29.069162</td>\n",
        "      <td>end: Create Training Data</td>\n",
-       "      <td>10.340026</td>\n",
+       "      <td>11.104644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>27.420515</td>\n",
+       "      <td>29.075453</td>\n",
        "      <td>start: Learn Structure</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>28.449075</td>\n",
+       "      <td>29.538742</td>\n",
        "      <td>end: Learn Structure</td>\n",
-       "      <td>1.028560</td>\n",
+       "      <td>0.463289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>28.454886</td>\n",
+       "      <td>29.546267</td>\n",
        "      <td>start: Get Dependencies</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>29.024710</td>\n",
+       "      <td>30.134318</td>\n",
        "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.569824</td>\n",
+       "      <td>0.588051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>71.569077</td>\n",
-       "      <td>start: Learn Structure</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>71.751239</td>\n",
-       "      <td>end: Learn Structure</td>\n",
-       "      <td>0.182162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>73.474231</td>\n",
-       "      <td>start: Get Dependencies</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>73.985456</td>\n",
-       "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.511225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>73.985456</td>\n",
+       "      <td>30.134318</td>\n",
        "      <td>total_execution_time</td>\n",
-       "      <td>13.658362</td>\n",
+       "      <td>13.201138</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    time_point                          msg  execution_time\n",
-       "0     0.735763             start: Load Data        0.000000\n",
-       "1     1.762328               end: Load Data        1.026565\n",
-       "2    17.074050  start: Create Training Data        0.000000\n",
-       "3    27.414076    end: Create Training Data       10.340026\n",
-       "4    27.420515       start: Learn Structure        0.000000\n",
-       "5    28.449075         end: Learn Structure        1.028560\n",
-       "6    28.454886      start: Get Dependencies        0.000000\n",
-       "7    29.024710        end: Get Dependencies        0.569824\n",
-       "8    71.569077       start: Learn Structure        0.000000\n",
-       "9    71.751239         end: Learn Structure        0.182162\n",
-       "10   73.474231      start: Get Dependencies        0.000000\n",
-       "11   73.985456        end: Get Dependencies        0.511225\n",
-       "12   73.985456         total_execution_time       13.658362"
+       "   time_point                          msg  execution_time\n",
+       "0    0.006949             start: Load Data        0.000000\n",
+       "1    1.052103               end: Load Data        1.045154\n",
+       "2   17.964518  start: Create Training Data        0.000000\n",
+       "3   29.069162    end: Create Training Data       11.104644\n",
+       "4   29.075453       start: Learn Structure        0.000000\n",
+       "5   29.538742         end: Learn Structure        0.463289\n",
+       "6   29.546267      start: Get Dependencies        0.000000\n",
+       "7   30.134318        end: Get Dependencies        0.588051\n",
+       "8   30.134318         total_execution_time       13.201138"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
